# libersystem

./: .editorconfig  .gitignore  CONCEPT_CZ.md  CONCEPT_EN.md  INSTALL.md  NOTES.md  README.md  TODO.md  commit.sh  fix-rights.sh  product.conf  rustfmt.toml  setup.sh
.cargo/: config.toml
docs/: CONCEPT_CZ.md  CONCEPT_EN.md  DEBUG.md  DYNAMIC_EXECUTABLES.tsv  DYNAMIC_IMAGE.tsv  DYNAMIC_LINKING.md  DYNAMIC_WAVES.tsv  IMAGE_FORMATS.md  LIBERFS.md  LSIDL.md  PACKAGE_FORMAT.md  PERF.md  THREAT_MODEL.md
src/: Justfile
src/.cargo/: config.toml
src/fs/fat/: Cargo.toml
src/fs/fat/src/: dir.rs  lib.rs  tests.rs
src/fs/liberfs/: Cargo.toml
src/fs/liberfs/src/: blkalloc.rs  dir.rs  fsck.rs  fsops.rs  inode.rs  lib.rs  snapshot.rs  tests.rs  txn.rs
src/fs/udf/: Cargo.toml
src/fs/udf/src/: lib.rs  tests.rs
src/kernel/: Cargo.toml  build.rs  cli.rs  console.rs  console_input.rs  device.rs  elf.rs  fault.rs  graph.rs  loader.rs  main.rs  memlayout.rs  panic.rs  pkg.rs  product.rs  sched.rs  smp.rs  sync.rs  syscall.rs  tests.rs
src/kernel/.cargo/: config.toml
src/kernel/arch/: mod.rs
src/kernel/arch/aarch64/: boot.rs  context.rs  dtb.rs  exceptions.rs  gic.rs  interrupts.rs  mod.rs  paging.rs  pci.rs  percpu.rs  psci.rs  serial.rs  virtio_blk.rs
src/kernel/arch/common/: context.rs  dtb.rs  fwcfg.rs  mod.rs  msi.rs  paging.rs  pci.rs  rng.rs  time.rs
src/kernel/arch/riscv64/: boot.rs  context.rs  dtb.rs  imsic.rs  interrupts.rs  mod.rs  paging.rs  pci.rs  percpu.rs  plic.rs  serial.rs  smp.rs  traps.rs  usermode.rs
src/kernel/arch/x86_64/: apboot.rs  apic.rs  context.rs  gdt.rs  idt.rs  interrupts.rs  ioapic.rs  mod.rs  msr.rs  paging.rs  pci.rs  percpu.rs  pit.rs  port.rs  random.rs  rtc.rs  serial.rs  syscall.rs  tsc.rs  usermode.rs
src/kernel/linker/: aarch64.ld  riscv64.ld  x86_64.ld
src/kernel/mem/: frame.rs  heap.rs  mod.rs
src/kernel/object/: address_space.rs  channel.rs  device_memory.rs  dma_buffer.rs  domain.rs  event.rs  handle.rs  interrupt.rs  memory_object.rs  mod.rs  process.rs  rights.rs  thread.rs  timer.rs
src/liberfs/: Cargo.toml
src/liberfs/src/: lib.rs  tests.rs
src/loader/: Cargo.toml  riscv64-pe.ld
src/loader/.cargo/: config.toml
src/loader/src/: elf.rs  main.rs  serial.rs  uefi.rs
src/loader/src/arch/: mod.rs
src/loader/src/arch/aarch64/: mod.rs  serial.rs
src/loader/src/arch/riscv64/: head.rs  mod.rs  serial.rs
src/loader/src/arch/x86_64/: mod.rs  paging.rs  serial.rs
src/lsfs/: Cargo.toml
src/lsfs/src/: lib.rs  tests.rs
src/proto/: Cargo.toml
src/proto/src/: .lsidl-generated.manifest  addr.rs  clock.rs  codec.rs  lib.rs  path.rs  shell.rs  system.rs  tests.rs
src/proto/src/shell/: tests.rs
src/sdk/: Cargo.toml  rust-toolchain.toml
src/sdk/.cargo/: config.toml
src/sdk/src/: lib.rs  world.rs
src/tools/audio-bench/: Cargo.toml
src/tools/audio-bench/src/: main.rs
src/tools/image-bench/: Cargo.toml
src/tools/image-bench/src/: main.rs
src/tools/image-mutate/: Cargo.toml
src/tools/image-mutate/src/: main.rs
src/tools/lsidl-gen/: Cargo.toml
src/tools/lsidl-gen/src/: ast.rs  codegen.rs  lexer.rs  main.rs  parser.rs  resolve.rs  tests.rs  token.rs  validate.rs
src/user/config-client/: Cargo.toml
src/user/config-client-provider/: Cargo.toml
src/user/config-client-provider/src/: lib.rs
src/user/config-client/src/: lib.rs
src/user/device-client-provider/: Cargo.toml
src/user/drivers/: Cargo.toml  build.rs
src/user/drivers/core/: Cargo.toml
src/user/drivers/core/src/: common.rs  hid.rs  usb_hid.rs  virtio_console.rs  virtio_input.rs  virtio_net.rs  virtio_snd.rs  xhci.rs
src/user/drivers/src/: common.rs  keys.rs  net.rs  usb_hid.rs  usb_storage.rs  virtio.rs  virtio_blk.rs  virtio_console.rs  virtio_gpu.rs  virtio_input.rs  virtio_net.rs  xhci.rs
src/user/imgconv/: Cargo.toml
src/user/imgconv/src/: lib.rs  tests.rs
src/user/jpeg/: Cargo.toml
src/user/jpeg/src/: lib.rs  tests.rs
src/user/jpeg/tests/data/: README.md
src/user/network-client/: Cargo.toml
src/user/network-client/src/: lib.rs
src/user/observability-client/: Cargo.toml
src/user/observability-client/src/: lib.rs
src/user/resources-client/: Cargo.toml
src/user/resources-client/src/: lib.rs
src/user/rt/: Cargo.toml
src/user/rt/src/: heap.rs  lib.rs
src/user/security-client/: Cargo.toml
src/user/security-client-provider/: Cargo.toml
src/user/security-client-provider/src/: lib.rs
src/user/security-client/src/: lib.rs
src/user/services/: Cargo.toml  build.rs  manifest.txt
src/user/services/core/: Cargo.toml
src/user/services/core/src/: audio_service.rs  component_host.rs  display_service.rs  file_picker.rs  lib.rs  net.rs  process_service.rs  request_probe.rs  resource_manager.rs  resource_probe.rs  sandbox_probe.rs  service_manager.rs
src/user/services/core/src/graph_limits/: tests.rs
src/user/services/core/src/shell_language/: tests.rs
src/user/services/src/: audio_engine.rs  audio_service.rs  commands.rs  component_host.rs  config_service.rs  console_service.rs  date.rs  device_manager.rs  device_service.rs  display_service.rs  executable.rs  file_picker.rs  graph_limits.rs  input_service.rs  lib.rs  log_service.rs  net.rs  network_service.rs  permission_manager.rs  process_service.rs  request_probe.rs  resource_manager.rs  resource_probe.rs  sandbox_probe.rs  service_manager.rs  session_service.rs  shell.rs  shell_language.rs  system_graph_service.rs  time_service.rs  wasi_host.rs  watchdog_probe.rs
src/user/services/src/executable/: tests.rs
src/user/services/src/service_manager/: bootstrap.rs  lifecycle.rs
src/user/services/storage/: Cargo.toml
src/user/services/system_manager/: Cargo.toml
src/user/services/system_manager/src/: main.rs
src/user/session-proto/: Cargo.toml
src/user/session-proto/src/: lib.rs
src/user/storage/: Cargo.toml  build.rs
src/user/storage-proto/: Cargo.toml
src/user/storage/src/: client.rs  manager.rs  runtime.rs  service.rs
src/wasm/: Cargo.toml
src/wasm/src/: decode.rs  interp.rs  lib.rs  module.rs  parser.rs  tests.rs
(+484 files in other folders)
