[package]
name = "kernel"
# The product version is the single source of truth in /product.conf (surfaced at
# runtime via build.rs -> env!("PRODUCT_VERSION")); Cargo's optional package
# version is unused here and omitted.
edition = "2024"
description = "OS kernel"

[[bin]]
name = "kernel"
path = "main.rs"

[dependencies]
limine = "0.5"
# Shared kernel/userspace ABI constants (syscalls, errors, rights, package format).
abi = { path = "../abi" }

# abi is also a build-dependency so build.rs packs with the same constants.
[build-dependencies]
abi = { path = "../abi" }

# Note: the x86_64-unknown-none target is panic-strategy = "abort" by default, so
# we deliberately do NOT set `panic = "abort"` per-profile. Doing so makes cargo
# pass `-C panic=abort` for normal builds while the (ignored) test profile omits
# it, which builds `core` twice with different hashes and breaks `cargo test`
# with a duplicate-lang-item error.
[profile.release]
lto = true
