[package]
name = "liberfs"
# The product version lives only in /product.conf; Cargo's optional package
# version is unused here and omitted.
edition = "2024"
description = "LiberFS - a simple writable on-disk filesystem (block allocation, inodes, a root directory) behind one BlockDevice trait"

[dependencies]
