[package]
name = "proto"
# The product version lives only in /product.conf; Cargo's optional package
# version is unused here and omitted.
edition = "2024"
description = "Generated LSIDL bindings (wire codec, clients, servers) for LiberSystem"

[features]
default = []
channel-client-impl = ["dep:ipc-client"]
shared-image = ["channel-client-impl", "display-proto/shared-image", "input-proto/shared-image", "ipc-client/shared-image", "process-proto/shared-image", "security-proto/shared-image", "session-proto/shared-image", "storage-proto/shared-image"]

[dependencies]
base-proto = { path = "../user/base-proto" }
display-proto = { path = "../user/display-proto" }
input-proto = { path = "../user/input-proto" }
process-proto = { path = "../user/process-proto" }
security-proto = { path = "../user/security-proto" }
session-proto = { path = "../user/session-proto" }
storage-proto = { path = "../user/storage-proto" }
wire = { path = "../wire" }
ipc-client = { path = "../user/ipc-client", optional = true }
