[package]
name = "proto"
# The product version lives only in /product.conf; Cargo's optional package
# version is unused here and omitted.
edition = "2024"
description = "Generated LSIDL bindings (wire codec, clients, servers) for LiberSystem"

[features]
default = []
channel-client-impl = ["dep:ipc-client"]
shared-image = ["audio-proto/shared-image", "channel-client-impl", "config-proto/shared-image", "device-proto/shared-image", "display-proto/shared-image", "input-proto/shared-image", "ipc-client/shared-image", "log-proto/shared-image", "network-proto/shared-image", "observability-proto/shared-image", "process-proto/shared-image", "resources-proto/shared-image", "security-proto/shared-image", "session-proto/shared-image", "storage-proto/shared-image", "time-proto/shared-image"]

[dependencies]
audio-proto = { path = "../user/libs/audio-proto" }
base-proto = { path = "../user/libs/base-proto" }
config-proto = { path = "../user/libs/config-proto" }
device-proto = { path = "../user/libs/device-proto" }
display-proto = { path = "../user/libs/display-proto" }
input-proto = { path = "../user/libs/input-proto" }
log-proto = { path = "../user/libs/log-proto" }
network-proto = { path = "../user/libs/network-proto" }
observability-proto = { path = "../user/libs/observability-proto" }
process-proto = { path = "../user/libs/process-proto" }
resources-proto = { path = "../user/libs/resources-proto" }
security-proto = { path = "../user/libs/security-proto" }
session-proto = { path = "../user/libs/session-proto" }
storage-proto = { path = "../user/libs/storage-proto" }
time-proto = { path = "../user/libs/time-proto" }
wire = { path = "../wire" }
ipc-client = { path = "../user/libs/ipc-client", optional = true }
