[package]
name = "fat"
# The product version lives only in /product.conf; Cargo's optional package
# version is unused here and omitted.
edition = "2024"
description = "FAT - a read-only FAT12/16/32 and exFAT backend (foreign removable media) behind one BlockDevice trait"

[dependencies]
fscore = { path = "../core" }
