[package]
name = "image-bench"
edition = "2024"
description = "Host release encode/decode benchmark for LiberSystem image leaves"

[dependencies]
imgconv = { path = "../../user/libs/imgconv" }
pix = { path = "../../user/libs/pix" }
png = { path = "../../user/libs/png" }
webp = { path = "../../user/libs/webp" }
