[package]
name = "image-mutate"
edition = "2024"
description = "Deterministic hostile-input and mutation gate for LiberSystem image decoders"

[dependencies]
apng = { path = "../../user/apng" }
bmp = { path = "../../user/bmp" }
gif = { path = "../../user/gif" }
ico = { path = "../../user/ico" }
icns = { path = "../../user/icns" }
imgconv = { path = "../../user/imgconv" }
jpeg = { path = "../../user/jpeg" }
pcx = { path = "../../user/pcx" }
png = { path = "../../user/png" }
ppm = { path = "../../user/ppm" }
qoi = { path = "../../user/qoi" }
tga = { path = "../../user/tga" }
webp = { path = "../../user/webp" }
