[package]
name = "image-mutate"
edition = "2024"
description = "Deterministic hostile-input and mutation gate for LiberSystem image decoders"

[dependencies]
apng = { path = "../../user/libs/apng" }
bmp = { path = "../../user/libs/bmp" }
gif = { path = "../../user/libs/gif" }
ico = { path = "../../user/libs/ico" }
icns = { path = "../../user/libs/icns" }
imgconv = { path = "../../user/libs/imgconv" }
jpeg = { path = "../../user/libs/jpeg" }
pcx = { path = "../../user/libs/pcx" }
png = { path = "../../user/libs/png" }
ppm = { path = "../../user/libs/ppm" }
qoi = { path = "../../user/libs/qoi" }
tga = { path = "../../user/libs/tga" }
webp = { path = "../../user/libs/webp" }
