[package]
name = "config-client-provider"
edition = "2024"
description = "ELF trampoline provider for concrete LiberSystem config channel clients"

[lib]
path = "src/lib.rs"

[features]
default = []
shared-image = ["config-proto/shared-image"]

[dependencies]
config-proto = { path = "../config-proto" }
