[package]
name = "device-client-provider"
edition = "2024"
description = "ELF trampoline provider for concrete LiberSystem device channel clients"

[lib]
path = "src/lib.rs"

[features]
default = []
shared-image = ["device-proto/shared-image"]

[dependencies]
device-proto = { path = "../device-proto" }
