[dependencies]
base-proto = { path = "../base-proto" }
network-proto = { path = "../network-proto" }
wire = { path = "../../wire" }
[package]
name = "network-client"
edition = "2024"
description = "Dynamic channel-client boundary for the LiberSystem network LSIDL domain"

[lib]
path = "src/lib.rs"

[features]
default = []
shared-image = []
