[package]
name = "observability-client"
edition = "2024"
description = "Dynamic channel-client boundary for the LiberSystem observability LSIDL domain"

[lib]
path = "src/lib.rs"

[features]
default = []
shared-image = []

[dependencies]
base-proto = { path = "../base-proto" }
observability-proto = { path = "../observability-proto" }
