[package]
name = "rt"
# The product version lives only in /product.conf; Cargo's optional package
# version is unused here and omitted. `rt` is the shared
# ring-3 userspace runtime linked into every userspace program (the entry stub,
# syscall wrapper, panic handler, and the syscall/IPC/volume helpers).
edition = "2024"
description = "Shared ring-3 userspace runtime: entry stub, syscall wrapper, panic handler, and the syscall/IPC/volume helpers"

[features]
default = []
shared-image = []

[dependencies]
# Shared kernel/userspace ABI constants (the single source of truth), re-exported
# so the programs reach syscall numbers, error codes, rights, and the archive
# format through this one runtime crate.
abi = { path = "../../abi" }

# Note: the x86_64-unknown-none target is panic-strategy = "abort" by default, so
# we do not set `panic = "abort"` per-profile (same reasoning as the kernel).
