[package]
name = "security-client-provider"
edition = "2024"
description = "ELF trampoline provider for concrete LiberSystem security channel clients"

[lib]
path = "src/lib.rs"

[features]
default = []
shared-image = ["security-proto/shared-image"]

[dependencies]
security-proto = { path = "../security-proto" }
