[package]
name = "security-client"
edition = "2024"
description = "Dynamic channel-client boundary for the LiberSystem security LSIDL domain"

[lib]
path = "src/lib.rs"

[features]
default = []
shared-image = []

[dependencies]
base-proto = { path = "../base-proto" }
process-proto = { path = "../process-proto" }
security-proto = { path = "../security-proto" }
