[package]
name = "services"
# The product version lives only in /product.conf; Cargo's optional package
# version is unused here and omitted. The services crate produces the userspace
# system services started across the boot chain (ServiceManager first), loaded
# from the init package.
edition = "2024"
build = "../build.rs"
description = "Core userspace system services (ServiceManager, ...)"

[[bin]]
name = "service_manager"
path = "src/service_manager.rs"

[[bin]]
name = "log_service"
path = "src/log_service.rs"

[[bin]]
name = "device_manager"
path = "src/device_manager.rs"

[[bin]]
name = "device_service"
path = "src/device_service.rs"

[[bin]]
name = "process_service"
path = "src/process_service.rs"

[[bin]]
name = "config_service"
path = "src/config_service.rs"

[[bin]]
name = "network_service"
path = "src/network_service.rs"

[[bin]]
name = "console_service"
path = "src/console_service.rs"

[[bin]]
name = "display_service"
path = "src/display_service.rs"

[[bin]]
name = "time_service"
path = "src/time_service.rs"

[[bin]]
name = "audio_service"
path = "src/audio_service.rs"

[[bin]]
name = "input_service"
path = "src/input_service.rs"

[[bin]]
name = "system_graph_service"
path = "src/system_graph_service.rs"

[[bin]]
name = "permission_manager"
path = "src/permission_manager.rs"

[[bin]]
name = "resource_manager"
path = "src/resource_manager.rs"

[[bin]]
name = "session_service"
path = "src/session_service.rs"

[[bin]]
name = "watchdog_probe"
path = "src/watchdog_probe.rs"

[[bin]]
name = "sandbox_probe"
path = "src/sandbox_probe.rs"

[[bin]]
name = "request_probe"
path = "src/request_probe.rs"

[[bin]]
name = "resource_probe"
path = "src/resource_probe.rs"

[[bin]]
name = "wasi_host"
path = "src/wasi_host.rs"

[[bin]]
name = "component_host"
path = "src/component_host.rs"

[[bin]]
name = "file_picker"
path = "src/file_picker.rs"

[[bin]]
name = "shell"
path = "src/shell.rs"

[dependencies]
# Shared ring-3 userspace runtime (entry stub, syscall wrapper, panic handler, and
# the syscall/IPC/volume helpers); it re-exports the abi constants.
rt = { path = "../rt" }

# Generated LSIDL bindings (the proto codec, clients, and servers) - LogService
# serves them and the shell + ServiceManager speak them over the log channel.
proto = { path = "../../proto" }

# The graphics-free terminal model (L2): the cell grid, escape parser, and text
# serialization that ConsoleService renders to the framebuffer.
term = { path = "../../term" }

# The minimal WebAssembly runtime, used by the wasi_host component runner.
wasm = { path = "../../wasm" }

# Note: the x86_64-unknown-none target is panic-strategy = "abort" by default, so
# we do not set `panic = "abort"` per-profile (same reasoning as the kernel).
