[package]
name = "session-proto"
edition = "2024"
description = "Generated LSIDL session bindings for LiberSystem"

[features]
default = []
channel-client-impl = ["dep:ipc-client"]
shared-image = ["channel-client-impl", "ipc-client/shared-image"]

[dependencies]
base-proto = { path = "../base-proto" }
process-proto = { path = "../process-proto" }
wire = { path = "../../wire" }
ipc-client = { path = "../ipc-client", optional = true }
