[package]
name = "storage"
# The product version lives only in /product.conf; Cargo's optional package
# version is unused here and omitted. The storage crate
# produces the userspace StorageService service and a small demo client, both
# loaded from the init package.
edition = "2024"
build = "../build.rs"
description = "StorageService service and demo client"

[[bin]]
name = "storage_service"
path = "src/service.rs"

[[bin]]
name = "storage_client"
path = "src/client.rs"

[dependencies]
# Shared ring-3 userspace runtime (entry stub, syscall wrapper, panic handler, and
# the syscall/IPC/volume helpers); it re-exports the abi constants.
rt = { path = "../rt" }

# Generated LSIDL bindings: StorageService serves the Storage.Volume contract and
# the demo client speaks it, both via the proto codec + dispatch/client.
proto = { path = "../../proto" }

# Note: the x86_64-unknown-none target is panic-strategy = "abort" by default, so
# we do not set `panic = "abort"` per-profile (same reasoning as the kernel).
